--- a/80.html
+++ b/80.html
@@ -30,7 +30,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>FlixGo – Online Movies, TV Shows & Cinema HTML Template</title>
+	<title>Download 80 For Brady</title>
 
 </head>
 <body class="body">
@@ -204,8 +204,8 @@
 
 				<!-- player -->
 				<div class="col-12 col-xl-6">
-	<button type="button" class="form__btn">Download</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="button" class="form__btn">Trailer</button>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="button" class="form__btn">Subtitle</button>
+	<a href="https://www.sabishare.com/file/rJiphOLqn44-80-for-brady-2023-netnaija-com-mkv"><button type="submit" class="form__btn">Download</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="button" class="form__btn">Trailer</button>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sabishare.com/file/AmqwzFKLw88-80-for-brady-2023-netnaija-com-srt"><button type="submit" class="form__btn">Subtitle</button></a>
 				</div>
 				<!-- end player -->
 
