--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 		</div>
 	</section>
 	<!-- end home -->
+<a href="https://cdndn.com/srv.html?id=5527067&pub=2517984"><img src="https://cdndn.com/images/campaigns/5527067_120x120.png"></a>
 
 	<!-- content -->
 	<section class="content">
@@ -2214,6 +2215,7 @@ Londoners Maya and Jamie escape their urban nightmare to the tranquility of rura
 							<li><a href="#">Terms of Use</a></li>
 							<li><a href="#">Privacy Policy</a></li>
 						</ul>
+<a href="https://cdndn.com/srv.html?id=5527067&pub=2517984"><img src="https://cdndn.com/images/campaigns/5527067_120x120.png"></a>
 					</div>
 				</div>
 				<!-- end footer copyright -->
